CAMEL-22551: Fixed Mockito warning regarding `-XX:+EnableDynamicAgentLoading`